suppression du type pour le javascript (norme HTML5)

--- a/Wipy/Backup/VT-Design_Test/flash/AiCmirobot_menu_principal_begin.htm
+++ b/Wipy/Backup/VT-Design_Test/flash/AiCmirobot_menu_principal_begin.htm
@@ -13,9 +13,9 @@
         <link href="assets/css/miro.css" type="text/css" rel="stylesheet">
         <link href="assets/css/miro.responsive.css" type="text/css" rel="stylesheet">
 
-        <script src="assets/js/jquery-3.3.1.min.js" type="application/javascript"></script>
-        <script src="assets/js/bootstrap.bundle.min.js" type="application/javascript"></script>
-        <script src="assets/js/main.min.js" type="application/javascript"></script>
+        <script src="assets/js/jquery-3.3.1.min.js"></script>
+        <script src="assets/js/bootstrap.bundle.min.js"></script>
+        <script src="assets/js/main.min.js"></script>
 
 
 
