--- a/Wipy/VT-Design/VersionWebVTDesign/Binaires_36/AiCmirobot_header.htm
+++ b/Wipy/VT-Design/VersionWebVTDesign/Binaires_36/AiCmirobot_header.htm
@@ -36,17 +36,12 @@
         <div class="time">
             <div class="container">
                 <div class="row align-items-center">
-                    <div class="col-6">
+                    <div class="col-12 text-center">
                         <p id="now"></p>
                         <p id="clock"></p>
-                    </div>
-
-                    <div class="col-6 text-right">
-                        <button type="submit" class="btn btn-primary btn-sm" form="clock" disabled>Mettre à jour</button>
                     </div>
                 </div>
             </div>     
         </div>
 
         <main id="main" class="mt-3">
-
