--- a/Wipy/VT-Design/VersionWebVTDesign/Sources_37/AiCmirobot_menu_principal_begin.htm
+++ b/Wipy/VT-Design/VersionWebVTDesign/Sources_37/AiCmirobot_menu_principal_begin.htm
@@ -82,8 +82,7 @@ setTimeout(() => window.open('http://192.168.4.1/', '_self'), 1000);
                     </div>
 
                     <div class="col-6 text-right">
-                        <button type="submit" class="btn btn-primary btn-sm" form="clock">Mettre à jour</button>
-                        <button class="btn btn-primary btn-sm" onclick="Send_Clock_hidden2()">Mettre à jour JS</button>
+                        <button class="btn btn-primary btn-sm" onclick="Send_Clock_hidden2()">Mettre à jour</button>
                     </div>
                 </div>
             </div>     
