--- a/Wipy/Sources/AiCmirobot_wifi.htm
+++ b/Wipy/Sources/AiCmirobot_wifi.htm
@@ -60,8 +60,8 @@
 
                             <div class="form-group">
                                 <label>Mot de passe</label> 
-                                <input class="form-control" type="text" id="p1" name="p1" maxlength="8" pattern="[a-zA-Z0-9]{1,8}">
-                                <em>Caractères autorisés : chiffre et lettre (minuscule et majuscule) sans accent</em>
+                                <input class="form-control" type="text" id="p1" name="p1" minlength="8" maxlength="20" pattern="[a-zA-Z0-9]{8,20}">
+                                <em>Caractères autorisés : chiffre et lettre (minuscule et majuscule) ayant minumum 8 Caractères</em>
                             </div>
 
                             <p>
