Modif page Info

--- a/Wipy/Binaires/Version_38/AiCmirobot_info.htm
+++ b/Wipy/Binaires/Version_38/AiCmirobot_info.htm
@@ -102,7 +102,7 @@ vertical-align: middle;
 
 
   <div class="row row-centered">
-    <div class="column small-centered"><button class="button 150px-width" onclick="location.href='/'">Menu Principal</button></div>
+    <div class="column small-centered"><a><button class="button 150px-width" onclick="location.href='/'">Menu Principal</button></a></div>
   </div>
 </body>
 </html>
