--- a/Wipy/Sources/AiCmirobot_p.htm
+++ b/Wipy/Sources/AiCmirobot_p.htm
@@ -65,7 +65,7 @@
                         <ul class="miro-nav">
                             <li><a class="btn btn-secondary mb-2" href="/">Menu principal</a></li>
                         </ul>
-
+					<div class="pad19">
                         <div class="row mb-2">
                             <div class="col-12">
                                 <ul class="prgm-nav">
@@ -97,7 +97,7 @@
                                 </ul>
                             </div>
                         </div>
-
+					</div>
                         <ul class="miro-nav">
                             <li><a class="btn btn-primary" onclick="Send_Command(10)">Standard</a></li>
                             <li><a class="btn btn-primary" onclick="Send_Command(11)">Pailleux</a></li>
