Modifications page planning

--- a/Wipy/FWTOOL-CLI/Version_38/Sources/AiCmirobot_planning_header.htm
+++ b/Wipy/FWTOOL-CLI/Version_38/Sources/AiCmirobot_planning_header.htm
@@ -32,5 +32,5 @@
                                             <th scope="col">Programme</th>
                                         </tr>
                                     </thead>
-                                </table>
-                            </div>
+									<tbody>
+										
