--- a/Wipy/Sources/AiCmirobot_planning_header.htm
+++ b/Wipy/Sources/AiCmirobot_planning_header.htm
@@ -32,5 +32,4 @@
                                             <th scope="col">Programme</th>
                                         </tr>
                                     </thead>
-                                </table>
-                            </div>
+									<tbody>
