Modification supplémentaire du footer ... Rajout d'une ligne Css sur index clock

--- a/Wipy/FWTOOL-CLI/Version_38/Sources/AiCmirobot_menu_principal_begin.htm
+++ b/Wipy/FWTOOL-CLI/Version_38/Sources/AiCmirobot_menu_principal_begin.htm
@@ -12,6 +12,7 @@
         <link href="assets/css/bootstrap.min.css" type="text/css" rel="stylesheet">
         <link href="assets/css/miro.css" type="text/css" rel="stylesheet">
         <link href="assets/css/miro.responsive.css" type="text/css" rel="stylesheet">
+	<style type="text/css"> footer { position : fixed;} </style>
 
         <script src="assets/js/jquery-3.3.1.min.js" type="text/javascript"></script>
         <script src="assets/js/bootstrap.bundle.min.js" type="text/javascript"></script>
