--- a/Wipy/FWTOOL-CLI/Version_38/Sources/AiCmirobot.htm
+++ b/Wipy/FWTOOL-CLI/Version_38/Sources/AiCmirobot.htm
@@ -19,8 +19,11 @@
 
         <style type="text/css">
             html, body { 
-                cursor: pointer; 
+                cursor: pointer;
+	
             }
+            footer 
+             {position : fixed;} 
         </style>
 
         <script language="javascript">
