--- a/Wipy/FWTOOL-CLI/Version_38/Sources/AiCmirobot_clock_header.htm
+++ b/Wipy/FWTOOL-CLI/Version_38/Sources/AiCmirobot_clock_header.htm
@@ -10,7 +10,7 @@
                 	xmlhttp.open("GET","Plan=" + cmd,true); xmlhttp.send()	
                 }
             </script> 
-
+            <style> footer { position : fixed;}</style>
             <div class="container">
                 <div class="row">
                     <div class="col-12">
