--- a/Wipy/FWTOOL-CLI/Version_Test/Sources/configuration.htm
+++ b/Wipy/FWTOOL-CLI/Version_Test/Sources/configuration.htm
@@ -8,3 +8,4 @@
 						
                         <form action="/Conf" method="post" class="form-inline">
                             <button type="submit" class="btn btn-primary mb-3">Sauvegarder</button>
+								<div class="Conf">
