Heure mise a jour directe

--- a/Wipy/FWTOOL-CLI/Version_39/Sources/index.html
+++ b/Wipy/FWTOOL-CLI/Version_39/Sources/index.html
@@ -57,7 +57,7 @@
 											<a class="nav-link" id="m_time"></a>
 										</li>
 										<li class="nav-item">
-											<a class="nav-link" onclick="Send_Clock_hidden2()">Mettre à jour</a>
+											<a class="nav-link" onclick="maj_clock()">Régler l'heure</a>
 										</li>
 									</ul>
 								</div>
