--- a/Wipy/Sources/index.html
+++ b/Wipy/Sources/index.html
@@ -16,7 +16,7 @@
 	<body>
         <header class="header">
 				<div class="container-fluid" id="main_nav">
-						<nav class="navbar navbar-expand-lg navbar-dark">
+						<nav class="navbar navbar-expand-xl navbar-dark">
 							<a class="navbar-brand" onclick="comd(home); set_active()"id="home" data-toggle="collapse" data-target="#navbarColor01"><img src="assets/img/l_white.png" width="90"/></a>
 							<button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
 									<span class="navbar-toggler-icon"></span>
