--- a/Wipy/FWTOOL-CLI/Version_39/Sources/index.html
+++ b/Wipy/FWTOOL-CLI/Version_39/Sources/index.html
@@ -16,16 +16,16 @@
 	<body>
         <header class="header">
 				<div class="container-fluid" id="main_nav">
-						<nav class="navbar navbar-expand-lg navbar-dark">
+						<nav class="navbar navbar-expand-xl navbar-dark">
 							<a class="navbar-brand" onclick="comd(home); set_active()"id="home" data-toggle="collapse" data-target="#navbarColor01"><img src="assets/img/l_white.png" width="90"/></a>
-							<h3 id="etat_co">Non Connecté</h3>
+							<a id="etat_co">Non Connecté</a>
 							<button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
 									<span class="navbar-toggler-icon"></span>
 								</button>
 								
 								<div class="navbar-collapse collapse" id="navbarColor01">
 									<ul class="navbar-nav mr-auto">
-										<li class="nav-item" id="nav_manu" ">
+										<li class="nav-item" id="nav_manu">
 											<a class="nav-link" id ="page_manu" data-toggle="collapse" data-target="#navbarColor01" onclick="comd(manu);set_active()">Manuel</a>
 										</li>
 										<li class="nav-item"id="nav_prog">
