--- a/Wipy/Sources/index.html
+++ b/Wipy/Sources/index.html
@@ -4,7 +4,7 @@
 			<meta charset="utf-8">
 			<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 			<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
-			<title>P5</title>
+			<title id="thetitle">P5</title>
 			<link rel="icon" href="favicon.ico" type="image/x-icon"/>
 			<link href="assets/css/bootstrap.min.css" type="text/css" rel="stylesheet">
 			<link href="assets/css/miro.css" type="text/css" rel="stylesheet">
@@ -18,6 +18,7 @@
 				<div class="container-fluid" id="main_nav">
 						<nav class="navbar navbar-expand-xl navbar-dark">
 							<a class="navbar-brand" onclick="comd(home); set_active()"id="home" data-toggle="collapse" data-target="#navbarColor01"><img src="assets/img/l_white.png" width="90"/></a>
+							<a id="etat_co">Non Connecté</a>
 							<button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
 									<span class="navbar-toggler-icon"></span>
 								</button>
@@ -85,7 +86,7 @@
 					<div class="col-12 title_alt" >Mot de passe requis</div>
 				</div>
 				<div class="row context">
-					<div class="col-12" ><p><input type="password" id="motdepasse" size="5" maxlength="5"></div>
+					<div class="col-12" ><p><input type="password" id="motdepasse" size="5" maxlength="13"></div>
 				</div>
 				<div class="row response">
 					<div class="col-6 oui" id="y_pass">...</div>
