Amelioration de la selection du menu, seule la page actuelle est surlignée.

--- a/Wipy/FWTOOL-CLI/Version_39/Sources/index.html
+++ b/Wipy/FWTOOL-CLI/Version_39/Sources/index.html
@@ -29,28 +29,28 @@
 											<a class="nav-link" id ="page_manu" data-toggle="collapse" data-target="#navbarColor01" onclick="comd(manu);set_active()">Manuel</a>
 										</li>
 										<li class="nav-item"id="nav_prog">
-											<a class="nav-link" id ="page_prog" onclick="comd(programme);set_active()" data-toggle="collapse" data-target="#navbarColor01">Programmes</a>
+											<a class="nav-link" id ="page_prog" onclick="comd(programme);" data-toggle="collapse" data-target="#navbarColor01">Programmes</a>
 										</li>
 										<li class="nav-item" id="nav_clk">
-											<a class="nav-link" id ="page_clk" onclick="comd(clock);set_active()" data-toggle="collapse" data-target="#navbarColor01" >Horloge</a>
+											<a class="nav-link" id ="page_clk" onclick="comd(clock);" data-toggle="collapse" data-target="#navbarColor01" >Horloge</a>
 										</li>
 										<li class="nav-item" id="nav_info">
-											<a class="nav-link" id ="page_info" onclick="comd(info);set_active()" data-toggle="collapse" data-target="#navbarColor01">Informations</a>
+											<a class="nav-link" id ="page_info" onclick="comd(info);" data-toggle="collapse" data-target="#navbarColor01">Informations</a>
 										</li>
 										<li class="nav-item" id="nav_edit">
-											<a class="nav-link" id ="page_edit" onclick="g_edit();set_active()" data-toggle="collapse" data-target="#navbarColor01" >Editions</a>
+											<a class="nav-link" id ="page_edit" onclick="g_edit();" data-toggle="collapse" data-target="#navbarColor01" >Editions</a>
 										</li>
 										<li class="nav-item"id="nav_plan">
-											<a class="nav-link" id="page_plan" onclick="g_planning();set_active()" data-toggle="collapse" data-target="#navbarColor01" >Planning</a>
+											<a class="nav-link" id="page_plan" onclick="g_planning();" data-toggle="collapse" data-target="#navbarColor01" >Planning</a>
 										</li>
 										<li class="nav-item"id="nav_conf">
-											<a class="nav-link" id ="page_conf" onclick="comd(conf);set_active()" data-toggle="collapse" data-target="#navbarColor01">Configuration</a>
+											<a class="nav-link" id ="page_conf" onclick="comd(conf);" data-toggle="collapse" data-target="#navbarColor01">Configuration</a>
 										</li>
 										<li class="nav-item"id="nav_cali">
-											<a class="nav-link" id ="page_cali" onclick="comd(calibration);set_active()" data-toggle="collapse" data-target="#navbarColor01">Calibration</a>
+											<a class="nav-link" id ="page_cali" onclick="comd(calibration);" data-toggle="collapse" data-target="#navbarColor01">Calibration</a>
 										</li>
 										<li class="nav-item"id="nav_wifi">
-											<a class="nav-link" id ="page_wifi" onclick="g_wifi();set_active()" data-toggle="collapse" data-target="#navbarColor01">Wi-Fi</a>
+											<a class="nav-link" id ="page_wifi" onclick="g_wifi();" data-toggle="collapse" data-target="#navbarColor01">Wi-Fi</a>
 										</li>
 										<div style="border-right:1px solid #BF073E;"></div>
 										<li class="nav-item">
