Correction Menu Onglet selectionné

--- a/Wipy/FWTOOL-CLI/Version_39/Sources/index.html
+++ b/Wipy/FWTOOL-CLI/Version_39/Sources/index.html
@@ -18,7 +18,7 @@
 				<div class="container-fluid" id="main_nav">
 						<nav class="navbar navbar-expand-xl navbar-dark">
 							<a class="navbar-brand" onclick="comd(home); set_active()"id="home" data-toggle="collapse" data-target="#navbarColor01"><img src="assets/img/l_white.png" width="90"/></a>
-							<a id="etat_co">Non Connecté</a>
+							<a id="etat_co"></a>
 							<button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
 									<span class="navbar-toggler-icon"></span>
 								</button>
